--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
+  - title: "Categories"
+    url: "https://dmstjd1024.github.io/categories"
   # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
+  #   url: https://dmstjd1024.github.io/minimal-mistakes/about/
+  # - title: "Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
-  #   url: /collection-archive/
+  #   url: /collection-archive/H
   # - title: "Sitemap"
   #   url: /sitemap/
