--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ analytics:
 author:
   name             : "전은성"
   location         : "Seoul"
-  email            :
+  email            : "dmstjd1024@naver.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -254,6 +254,6 @@ defaults:
       author_profile: true
       read_time: true
       comments: true
-      share: true
+      share: false
       related: true
       sidebar_main: true
