--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,13 @@
 # main links
 main:
-  - title: "Categories"
-    url: "https://dmstjd1024.github.io/categories"
-  # - title: "About"
-  #   url: https://dmstjd1024.github.io/minimal-mistakes/about/
-  # - title: "Posts"
-  #   url: /year-archive/
+  - title: "Home"
+    url: "/"
+  - title: "Category"
+    url: "/categories"
+  - title: "Tags"
+    url: "/tags"
+  - title: "Posts"
+    url: "/year-archive/"
   # - title: "Sample Collections"
   #   url: /collection-archive/H
   # - title: "Sitemap"
