--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: 전은성 Dev
 description: "개발 블로그"
 logo_img: "/assets/img/favicon.webp"
-profile_img: "/assets/img/profile.webp"
+profile_img: "/assets/img/profile.jpeg"
 
 # Social Links
 email: dmstjd1024@naver.com
